1.13 -> 1.14:
    - jbj: study the mess with splint, remove annotations where possible.
    - jbj: add -D_GNU_SOURCE for gcc to use __builtin_stpcpy when available.
    - jbj: add static inline stpcpy for the deprived.
    - jbj: use stpcpy to eliminate sprintf calls everywhere but popthelp.c
    - jbj: remove (now unneeded afaik) va_copy() from POPT_fprintf().
    - jbj: inline strdup_fprintf() => POPT_fprintf keeping (unneeded?) va_copy.
    - rse: fix memcpy(3) based va_copy(3) fallbacks
    - jbj: fix: short option with "foo=bar" argument was mishandled.
	(Wayne Davison<wayned@samba.org>).
    - jbj: rename _ABS to avoid collisions, define DBL_EPSILON if not present
	(Wayne Davison<wayned@samba.org>).
    - jbj: test for <glob.h>, disable reading directory poptrc files if not.
    - jbj: add __attribute__(__unused__) (Wayne Davison<wayned@samba.org>).
    - jbj: permit equal after short option (Wayne Davison<wayned@samba.org>).
    - jbj: make sure that short options are printed only once with --usage.
    - jbj: don't display hidden short options with --usage.
    - jbj: updated sv.po (Translation Project).
    - jbj: updated {fi,nl}.po (Translation Project).
    - jbj: updated th.po (Translation Project).
    - rsc: avoid multilib file conflicts in generated doxygen.
    - jbj: updated vi.po and zh_CN.po (Translation Project).
    - jbj: fix: keep the poptHelpOptions array exactly the same size.
    - jbj: updated pl.po (Translation Project).
    - jbj: add new fi, th, zh_TW translations (Translation Project).
    - jbj: add "make updatepo" to simplify PO file maintenance.
    - jbj: display POPT_ARG_ARGV options in --help just like other options.
    - jbj: add test for POPT_ARG_ARGV handling.
    - jbj: fix: permit "--foo bar" and "--foo=bar" equivalent forms for aliases.
    - jbj: fix: tests 20 -> 23 require an explicit '--' arg separator now.
    - jbj: popt.3: add POPT_ARG_ARGV description.