@@ -1,4 +1,6 @@
 1.13 -> 1.14:
+    - jbj: permit "#define POPT_fprintf fprintf" to lose the malloc'ing fprintf.
+    - jbj: use vasprintf(3) when available (Wayne Davison<wayned@samba.org>).
     - jbj: study the mess with splint, remove annotations where possible.
     - jbj: add -D_GNU_SOURCE for gcc to use __builtin_stpcpy when available.
     - jbj: add static inline stpcpy for the deprived.
